<resources>
    <string name="app_name">LogInPage</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forget_password">forget password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="sign_in">Sign in</string>
    <string name="submit">SUBMIT</string>
    <string name="welcome_to_our_page">Welcome to our page..</string>
    <string name="forget_pass">Forget Password...</string>
    <string name="jatayu_earth_center">Jatayu earth center</string>
</resources>