<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/loginpage">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/material_dynamic_primary40"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/material_dynamic_primary60"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_below="@+id/signIn"
        android:gravity="center">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src = "@drawable/twiter"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src = "@drawable/facebook_background"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/google"
            />
    </LinearLayout>
</RelativeLayout>